overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	border-radius: 10px;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .block {
